--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": true,
         },
-    }
+    },"files.associations": {
+        ".haku": "yaml",
+      }
 }
